# moleditpy_orca_result_analyzer_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.py  pyproject.toml  run_tests.py  set_version.py
.github/workflows/: release.yml  tests.yml
crates/orca_mo_rs/: Cargo.toml  pyproject.toml
crates/orca_mo_rs/src/: mo_engine.rs
crates/orca_parser_rs/: Cargo.toml  pyproject.toml
crates/orca_parser_rs/src/: parser.rs
icon_generator/: create_icons.py
orca_result_analyzer_rust/: __init__.py  bond_analysis.py  charge_analysis.py  dipole_analysis.py  energy_analysis.py  energy_diag.py  force_analysis.py  freq_analysis.py  gui.py  logger.py  mo_analysis.py  mo_energy_diag.py  mo_engine.py  nmr_analysis.py  nmr_custom_ref_dialog.py  parser.py  property_analysis.py  scf_analysis.py  spectrum_widget.py  tddft_analysis.py  thermal_analysis.py  traj_analysis.py  utils.py  vis.py
src/: lib.rs
tests/: TESTS.md  test_about_menu.py  test_bond_analysis.py  test_cube_and_mo.py  test_force_analysis.py  test_freq_analysis.py  test_gui_reset_on_load.py  test_init.py  test_load_summary.py  test_nmr_mo_fixes.py  test_parser.py  test_parser_extended.py  test_parser_samples.py  test_plugin_integration.py  test_traj_analysis.py  test_utils.py
tests/sample_outputs/: NOTICE  acetone-opt.out  acetone-opt_5.out  benzene-opt-ene.out  benzene-opt-ene_5.out  benzene-opt-nmr.out  benzene-opt-nmr_5.out  benzene-opt-vex.out  benzene-opt-vex_5.out  benzene-opt.out  benzene-opt_5.out  ethane-scan.out
tests/sample_outputs/benzene-opt-ene_cubes/: benzene-opt-ene_MO_21.cube
