[package]
name = "orca-result-analyzer-rust"
version = "2.4.1"
edition = "2021"
description = "Rust-powered ORCA output parser for MoleditPy"
authors = ["HiroYokoyama"]

[lib]
name = "orca_parser_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
regex = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
