[workspace]
members = ["crates/orca_parser_rs", "crates/orca_mo_rs"]
resolver = "2"

[workspace.dependencies]
pyo3     = { version = "0.22", features = ["extension-module"] }
regex    = "1"
once_cell = "1"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
